--- a/citations.bib
+++ b/citations.bib
@@ -22,6 +22,10 @@ language     = {english}
 
 }
 
+
+
+
+
 @MastersThesis{STEJSKAL2019thesis,
 
 	AUTHOR = "STEJSKAL, Aleš",
@@ -52,3 +56,51 @@ note       = {\url{https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sit
 urldate = {2023-12-26}, 
 language     = {english}
 }
+
+
+@article{RAMIREZJIMENEZ2003577,
+title = {PIN diode-preamplifier set for the measurement of low-energy γ- and X-rays},
+journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+volume = {497},
+number = {2},
+pages = {577-583},
+year = {2003},
+issn = {0168-9002},
+doi = {https://doi.org/10.1016/S0168-9002(02)01806-5},
+url = {https://www.sciencedirect.com/science/article/pii/S0168900202018065},
+author = {F.J. Ramı́rez-Jiménez and R. López-Callejas and A. Cerdeira-Altuzarra and J.S. Benı́tez-Read and M. Estrada-Cueto and J.O. Pacheco-Sotelo},
+keywords = {X-ray spectrometers, Solid-state detectors, Low-noise preamplifiers},
+abstract = {A detector–preamplifier set for X-ray spectroscopy applications in the energy range of 5–60keV, for use in research laboratories, industry and in school experiments is presented. The main contribution of this work is the demonstration of an easy-to-implement, low-cost detector–preamplifier set that can be built with an inexpensive PIN diode and a low-noise preamplifier of the charge-sensitive type. A junction field-effect transistors in the front end and extremely low feedback capacitance are used in the preamplifier. The set was built and characterized experimentally. High conversion gain and good linearity over the whole energy range were obtained; the set provides an acceptable equivalent noise charge, on the order of 120 electrons r.m.s. Spectra from different X-ray radioactive sources were obtained by using the PIN detector at room temperature together with the preamplifier that is described.}
+}
+
+@misc{betaBPW,
+title     = {CERN DIY Particle Detector},
+note       = {\url{https://physicsopenlab.org/2020/06/15/cern-diy-particle-detector/}},
+urldate = {2023-12-26}, 
+language     = {english}
+}
+
+@misc{datS14605,
+author = {Hamamatsu},
+title     = {S14605},
+note       = {\url{https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/ssd/s14605_kpin1091e.pdf}},
+urldate = {2023-12-26}, 
+language     = {english}
+}
+
+@misc{datBPW34,
+author = {Vishay Semiconductors},
+title     = {BPW34, BPW34S},
+note       = {\url{https://www.vishay.com/docs/81521/bpw34.pdf}},
+urldate = {2023-12-26}, 
+language     = {english}
+}
+@misc{datOPF430,
+author  = {TT Electronics},
+title     = {OPF430},
+note       = {\url{https://cz.mouser.com/datasheet/2/414/OPF430-3241495.pdf}},
+urldate = {2023-12-26}, 
+language     = {english}
+}
+
+
