--- a/citations.bib
+++ b/citations.bib
@@ -40,7 +40,7 @@ language     = {english}
 
 }
 
-@BOOK{Leo1987-wy, title = "Techniques for nuclear and particle physics experiments", author = "Leo, William R",}
+@BOOK{Leo1987-wy, title = "Techniques for nuclear and particle physics experiments", author = "Leo, William R", year=1987}
 
 @article{https://doi.org/10.1029/2003JE002138, author = {Klingelhöfer, G. and Morris, R. V. and Bernhardt, B. and Rodionov, D. and de Souza Jr., P. A. and Squyres, S. W. and Foh, J. and Kankeleit, E. and Bonnes, U. and Gellert, R. and Schröder, C. and Linkin, S. and Evlanov, E. and Zubkov, B. and Prilutski, O.}, title = {Athena MIMOS II Mössbauer spectrometer investigation}, journal = {Journal of Geophysical Research: Planets}, volume = {108}, number = {E12}, pages = {}, keywords = {Mössbauer spectroscopy, iron mineralogy, Mars, weathering, instrumentation, MIMOS II}, doi = {https://doi.org/10.1029/2003JE002138}, 
 }
@@ -59,7 +59,7 @@ language     = {english}
 
 
 @article{RAMIREZJIMENEZ2003577,
-title = {PIN diode-preamplifier set for the measurement of low-energy γ- and X-rays},
+title = {PIN diode-preamplifier set for the measurement of low-energy gamma and X-rays},
 journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
 volume = {497},
 number = {2},
@@ -68,9 +68,24 @@ year = {2003},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01806-5},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900202018065},
-author = {F.J. Ramı́rez-Jiménez and R. López-Callejas and A. Cerdeira-Altuzarra and J.S. Benı́tez-Read and M. Estrada-Cueto and J.O. Pacheco-Sotelo},
+author = {F.J. Ramirez-Jimenez and R. Lopez-Callejas and A. Cerdeira-Altuzarra and J.S. Benitez-Read and M. Estrada-Cueto and J.O. Pacheco-Sotelo},
 keywords = {X-ray spectrometers, Solid-state detectors, Low-noise preamplifiers},
 abstract = {A detector–preamplifier set for X-ray spectroscopy applications in the energy range of 5–60keV, for use in research laboratories, industry and in school experiments is presented. The main contribution of this work is the demonstration of an easy-to-implement, low-cost detector–preamplifier set that can be built with an inexpensive PIN diode and a low-noise preamplifier of the charge-sensitive type. A junction field-effect transistors in the front end and extremely low feedback capacitance are used in the preamplifier. The set was built and characterized experimentally. High conversion gain and good linearity over the whole energy range were obtained; the set provides an acceptable equivalent noise charge, on the order of 120 electrons r.m.s. Spectra from different X-ray radioactive sources were obtained by using the PIN detector at room temperature together with the preamplifier that is described.}
+}
+
+
+@article{MARISCOTTI1967309,
+title = {A method for automatic identification of peaks in the presence of background and its application to spectrum analysis},
+journal = {Nuclear Instruments and Methods},
+volume = {50},
+number = {2},
+pages = {309-320},
+year = {1967},
+issn = {0029-554X},
+doi = {https://doi.org/10.1016/0029-554X(67)90058-4},
+url = {https://www.sciencedirect.com/science/article/pii/0029554X67900584},
+author = {M.A. Mariscotti},
+abstract = {A computer method is described that permits automatic analysis of high resolution spectra, provided that the data are stored in a way suitable for computer input (i.e., on magnetic or paper tape). The program reads the entire spectrum, locates the peaks and determines their amplitudes, centroids and widths by least squares fitting. Doublets are handled automatically.}
 }
 
 @misc{betaBPW,
@@ -103,4 +118,17 @@ urldate = {2023-12-26},
 language     = {english}
 }
 
-
+@misc{FrontEnd,
+author  = {Helmuth Spieler},
+institution  = {Lawrence Berkeley National Laboratory, Physics Division, Berkeley, CA 94720, U.S.A.},
+title     = {Front-End Electronics and Signal Processing},
+note       = {\url{https://www-physics.lbl.gov/~spieler/ICFA_Morelia/text/Front_End_Electronics_old.pdf}},
+urldate = {2023-12-26}, 
+language     = {english}
+}
+@misc{Optimized,
+author = {Kouril, Lukas and Pechousek, Jiri and Kohout, Pavel and Jiruš, Marek and Schlattauer, Leo},
+year = {2021},
+month = {09},
+title = {Optimized conversion X-rays Mössbauer setup for efficient bulk sample surface analysis}
+}
