--- a/citations.bib
+++ b/citations.bib
@@ -132,3 +132,18 @@ year = {2021},
 month = {09},
 title = {Optimized conversion X-rays Mössbauer setup for efficient bulk sample surface analysis}
 }
+
+@misc{cr110,
+author  = {Cremat Inc},
+title     = {CR-110-R2 charge sensitive preamplifier},
+note       = {\url{https://www.cremat.com/CR-110-R2.pdf}},
+urldate = {2023-12-26}, 
+language     = {english}
+}
+@misc{appCSPnote,
+author  = {Cremat Inc},
+title     = {Advice in using Cremat CSP modules},
+note       = {\url{https://www.cremat.com/applications/csp-application-notes/}},
+urldate = {2023-12-26}, 
+language     = {english}
+}
